--- a/Raddi Games/index.html
+++ b/Raddi Games/index.html
@@ -16,11 +16,15 @@
         <div class="categoria">
             <h2>Jogos de Ação</h2>
             <div class="jogo">
-                <img src="img/Fivenightatfreddys.png" alt="Jogo de Ação 1">
+                <a href="jogo1.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+1" alt="Jogo de Ação 1">
+                </a>
                 <p>Jogo de Ação 1</p>
             </div>
             <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+2" alt="Jogo de Ação 2">
+                <a href="jogo2.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+2" alt="Jogo de Ação 2">
+                </a>
                 <p>Jogo de Ação 2</p>
             </div>
         </div>
@@ -28,11 +32,15 @@
         <div class="categoria">
             <h2>Jogos de Aventura</h2>
             <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+3" alt="Jogo de Aventura 1">
+                <a href="jogo3.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+3" alt="Jogo de Aventura 1">
+                </a>
                 <p>Jogo de Aventura 1</p>
             </div>
             <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+4" alt="Jogo de Aventura 2">
+                <a href="jogo4.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+4" alt="Jogo de Aventura 2">
+                </a>
                 <p>Jogo de Aventura 2</p>
             </div>
         </div>
@@ -40,22 +48,15 @@
         <div class="categoria">
             <h2>Jogos de Estratégia</h2>
             <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+5" alt="Jogo de Estratégia 1">
+                <a href="jogo5.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+5" alt="Jogo de Estratégia 1">
+                </a>
                 <p>Jogo de Estratégia 1</p>
             </div>
             <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+6" alt="Jogo de Estratégia 2">
-                <p>Jogo de Estratégia 2</p>
-            </div>
-        </div>
-        <div class="categoria">
-            <h2>Jogos de Terror</h2>
-            <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+5" alt="Jogo de Estratégia 1">
-                <p>Jogo de Estratégia 1</p>
-            </div>
-            <div class="jogo">
-                <img src="https://via.placeholder.com/150x100?text=Jogo+6" alt="Jogo de Estratégia 2">
+                <a href="jogo6.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+6" alt="Jogo de Estratégia 2">
+                </a>
                 <p>Jogo de Estratégia 2</p>
             </div>
         </div>
