--- a/Raddi Games/jogo2.html
+++ b/Raddi Games/jogo2.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Ação 1</title>
+    <title>Jogo de Ação 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Jogo de Ação 1</h1>
+        <h1>Jogo de Ação 2</h1>
     </header>
     
     <section>
-        <p>Informações detalhadas sobre o Jogo de Ação 1.</p>
-        <!-- Você pode adicionar mais detalhes sobre o jogo aqui, como descrição, imagens, vídeos, etc. -->
+        <p>Informações detalhadas sobre o Jogo de Ação 2.</p>
+        <!-- Adicione aqui detalhes do jogo, como história, mecânica, etc. -->
     </section>
 
     <footer>
