--- a/Raddi Games/index.html
+++ b/Raddi Games/index.html
@@ -14,18 +14,30 @@
     
     <section class="categorias">
         <div class="categoria">
-            <h2>Jogos de Ação</h2>
+            <h2>Jogos de Ação e Tiro</h2>
             <div class="jogo">
                 <a href="jogo1.html">
-                    <img src="https://via.placeholder.com/150x100?text=Jogo+1" alt="Jogo de Ação 1">
+                    <img src="img/Fortnite.png" alt="Fortnite">
                 </a>
-                <p>Jogo de Ação 1</p>
+                <p>Fortnite</p>
             </div>
             <div class="jogo">
                 <a href="jogo2.html">
-                    <img src="https://via.placeholder.com/150x100?text=Jogo+2" alt="Jogo de Ação 2">
+                    <img src="img/Gta5.png" alt="Gta 5">
                 </a>
-                <p>Jogo de Ação 2</p>
+                <p>Gta 5</p>
+            </div>
+            <div class="jogo">
+                <a href="jogo3.html">
+                    <img src="img/Valorant.png" alt="Valorant">
+                </a>
+                <p>Gta 5</p>
+            </div>
+            <div class="jogo">
+                <a href="jogo4.html">
+                    <img src="img/Callofduty 1.png" alt="Callofduty">
+                </a>
+                <p>Call Of Duty</p>
             </div>
         </div>
 
@@ -55,9 +67,24 @@
             </div>
             <div class="jogo">
                 <a href="jogo6.html">
-                    <img src="https://via.placeholder.com/150x100?text=Jogo+6" alt="Jogo de Estratégia 2">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+5" alt="Jogo de Estratégia 2">
                 </a>
-                <p>Jogo de Estratégia 2</p>
+                <p>Jogo de Estratégia 1</p>
+            </div>
+        </div>
+        <div class="categoria">
+            <h2>Jogos de terror</h2>
+            <div class="jogo">
+                <a href="jogo5.html">
+                    <img src="img/Fivenightatfreddys.png" alt="Jogo de Estratégia 1">
+                </a>
+                <p>Jogo de Estratégia 1</p>
+            </div>
+            <div class="jogo">
+                <a href="jogo6.html">
+                    <img src="https://via.placeholder.com/150x100?text=Jogo+5" alt="Jogo de Estratégia 2">
+                </a>
+                <p>Jogo de Estratégia 1</p>
             </div>
         </div>
     </section>
