--- a/Raddi Games/jogo1.html
+++ b/Raddi Games/jogo1.html
@@ -10,6 +10,22 @@
     <header>
         <h1>Jogo de Ação 1</h1>
     </header>
+
+    <title>Vídeo do YouTube</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Assista ao vídeo!</h1>
+    </header>
+    
+    <section>
+        <h2>Veja o nosso vídeo sobre o Jogo</h2>
+        <!-- Incorporando o vídeo do YouTube com a tag <iframe> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=KCxZ4njtiuw" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+    </section>
     
     <section>
         <p>Informações detalhadas sobre o Jogo de Ação 1.</p>
