--- a/Raddi Games/jogo3.html
+++ b/Raddi Games/jogo3.html
@@ -16,6 +16,27 @@
         <!-- Adicione aqui detalhes do jogo, como história, mecânica, etc. -->
     </section>
 
+    <title>Vídeo do YouTube</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Assista ao vídeo!</h1>
+    </header>
+    
+    <section>
+        <h2>Veja o nosso vídeo sobre o Jogo</h2>
+        <!-- Incorporando o vídeo do YouTube com a tag <iframe> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=KCxZ4njtiuw" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+    </section>
+    
+    <section>
+        <p>Informações detalhadas sobre o Jogo de Ação 1.</p>
+        <!-- Você pode adicionar mais detalhes sobre o jogo aqui, como descrição, imagens, vídeos, etc. -->
+    </section>
+
     <footer>
         <p>&copy; 2024 Site de Jogos. Todos os direitos reservados.</p>
     </footer>
